RESOLVED FIXED147552
Ref-ify some functions that always succeed in constructing Documents.
https://bugs.webkit.org/show_bug.cgi?id=147552
Summary Ref-ify some functions that always succeed in constructing Documents.
Andreas Kling
Reported 2015-08-02 21:04:09 PDT
Patch forthcomin'
Attachments
Patch (10.03 KB, patch)
2015-08-02 21:05 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2015-08-02 21:05:10 PDT
WebKit Commit Bot
Comment 2 2015-08-02 21:08:34 PDT
Attachment 258048 [details] did not pass style-queue: ERROR: Source/WebCore/xml/XSLTProcessor.h:49: The parameter name "frame" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3 2015-08-09 01:11:50 PDT
Comment on attachment 258048 [details] Patch Clearing flags on attachment: 258048 Committed r188193: <http://trac.webkit.org/changeset/188193>
WebKit Commit Bot
Comment 4 2015-08-09 01:11:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.